# csc553

./: .gitignore  CMakeLists.txt  EVALUATION.txt  Makefile  README  README.md  block.c  block.h  code_generation.c  code_optimization.c  code_optimization.h  code_translation.c  code_translation.h  control_flow.c  control_flow.h  global.h  graph.c  graph.h  heap.c  heap.h  instruction.c  instruction.h  liveness_analysis.c  liveness_analysis.h  main.c  max_heap.c  max_heap.h  min_heap.c  min_heap.h  parser.y  reaching_definitions_analysis.c  reaching_definitions_analysis.h  scanner.l  set.c  set.h  stack.c  stack.h  symbol-table.c  symbol-table.h  syntax-tree.c  (+1 more)
ExampleInputs/: codegen.c  test05.c
eval/: prog01.c
eval/a2/: EVALUATION.txt  prog02.c  prog03.c  prog04.c  prog05.c
eval/a3/: prog01.c  prog02.c  prog03.c  prog04.c  prog05.c
mips_code/: codegen.s
